--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "autoprefixer": "10.4.14",
     "next": "13.3.0",
+    "pitchfinder": "^2.3.2",
     "postcss": "8.4.21",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1"
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.1"
   }
 }
